<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="BuR_MoverAxis_Array_u" Id="{7b704f7b-f9ed-46d6-bd04-74224a79cee2}">
    <Declaration><![CDATA[TYPE
BuR_MoverAxis_Array_u :
UNION
    asStruct : ARRAY[1..20] OF BuR_MoverAxis_EtherCAT_st;
    asArray  : ARRAY[0..200] OF USINT;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>