<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="BuR_MoverAxis_EtherCAT_st" Id="{64ae641a-6eb5-4916-a008-7abaf4789670}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE
BuR_MoverAxis_EtherCAT_st :
STRUCT
    diCurrentPos_um : DINT; // current position, expressed as um
    iCurrentVelo_mmps : INT; // current velocity in mm per second
    bStatus : UINT; // status flag
    //bFolowingError_mm : USINT; // folowing error
    bShelfLentgh_mm : INT; // shelf length in mm
//bShelfOffset_mm   : USINT; // shelf offset from the center 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>